@@ -37,14 +37,30 @@ void Schema::set_document(Document* document, bool embed)
   release_underlying();
 
   xmlSchemaParserCtxtPtr context = xmlSchemaNewDocParserCtxt( document->cobj() );
-  impl_ = xmlSchemaParse( context );
+
+  if(!context)
+  {
 #ifdef LIBXMLCPP_EXCEPTIONS_ENABLED
-  if ( !impl_ )
    throw parse_error("Schema could not be parsed");
+#else
+   return;
 #endif
+  }
+  
+  impl_ = xmlSchemaParse(context);
+  if(!impl_)
+  {
+    xmlSchemaFreeParserCtxt(context);
+#ifdef LIBXMLCPP_EXCEPTIONS_ENABLED
+    throw parse_error("Schema could not be parsed");
+#else
+    return;
+#endif
+  }
+
   impl_->_private = this;
   embedded_doc_ = embed;
-  xmlSchemaFreeParserCtxt( context );
+  xmlSchemaFreeParserCtxt(context);
 }
 
 Glib::ustring Schema::get_name() const
