@@ -1,3 +1,12 @@
+2010-11-26  Murray Cumming  <murrayc@murrayc.com>
+
+	Check some libxml function return values.
+
+	* libxml++/document.cc: do_write_to_stream():
+	* libxml++/schema.cc: set_document(): Check the results from 
+	xmlSchemaNewDocParserCtxt() and xmlSaveFormatFileTo().
+	Bug #635846 (Markus Elfring).
+
 2.33.1:
 
 2010-11-14  Murray Cumming  <murrayc@murrayc.com>
